tests/ecc-gcp-109-prevent_allow_all_ingress/placebo-green/get-computeMetadata-v1-instance-service-accounts-test@test.com-token_1.json
{
  "headers": {
    "server": "BaseHTTP/0.6 Python/3.9.2",
    "date": "Thu, 01 Dec 2022 19:29:15 GMT",
    "content-type": "application/json",
    "metadata-flavor": "Google",
    "status": "200",
    "content-location": "http://metadata.google.internal/computeMetadata/v1/instance/service-accounts/test@test.com/token?scopes=https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fcloud-platform"
  },
  "body": {
    "access_token": "#",
    "expires_in": 3489,
    "token_type": "Bearer"
  }
}
